--- a/src/app/technos/techno/techno.component.scss
+++ b/src/app/technos/techno/techno.component.scss
@@ -1,5 +1,11 @@
 @import "../../../assets/styles/variables";
 
+@mixin technoImage($name) {
+  &.#{$name}{
+    background-image:url('/assets/images/logos/#{$name}-logo.png');
+  }
+}
+
 .back{
   background: url('/assets/images/techbg.svg') no-repeat;
   background-size: 100% auto;
@@ -34,6 +40,7 @@
   text-align: center;
   padding: 0 5px;
 }
+
 .imgTech{
   width: $techW;
   height: $techH;
@@ -78,7 +85,7 @@
   @include technoImage('yeoman');
   @include technoImage('ionic');
   @include technoImage('lodash');
-  @include technoImage('socket');
+  @include technoImage('socket-io');
   @include technoImage('d3');
   @include technoImage('bower');
   @include technoImage('mongo');
@@ -92,7 +99,7 @@
   @include technoImage('prosody');
   @include technoImage('xmpp');
   @include technoImage('ruby');
-  @include technoImage('new');
+  @include technoImage('new-relic');
   @include technoImage('heroku');
   @include technoImage('html5');
   @include technoImage('css3');
@@ -108,6 +115,7 @@
   @include technoImage('typescript');
   @include technoImage('koa');
   @include technoImage('protractor');
+  @include technoImage('jasmine');
 
   // &.angular{
   //   background-image:url('/assets/images/logos/angular-logo.png');
@@ -232,12 +240,6 @@
   // &.webpack{
   //   background-image:url('/assets/images/logos/webpack-logo.png');
   // }
-}
-
-@mixin technoImage($name) {
-  &.#{$name}{
-    background-image:url('/assets/images/logos/#{$name}-logo.png');
-  }
 }
 
 /** FLIP **/
