feat(home): add nav for mobile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-line id="home"></app-line>
+<app-mobile-home id="mobile-home"></app-mobile-home>
 <app-projects id="projects"></app-projects>
 <app-technos id="technos"></app-technos>
 <app-nav></app-nav>
