--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -121,12 +121,7 @@ app, #home, #technos {
 }
 
 @media screen and (max-width: 800px) {
-  #home, [nav], socials:not(.socials_mobile) {
-    display:none;
-  }
-}
-@media screen and (min-width: 800px) {
-  #mobile-home {
-    display:none;
+  #home {
+    display: none;
   }
 }
