--- a/src/app/socials/socials.component.html
+++ b/src/app/socials/socials.component.html
@@ -1,4 +1,4 @@
-<div class="socials" [ngClass]="{'socials_mobile': mobile}">
+<div class="socials">
   <a href="https://www.facebook.com/asavignac1" class="nav-link facebook" target="_blank"></a>
   <a href="https://twitter.com/AntoineSavignac" class="nav-link twitter" target="_blank"></a>
   <a href="https://github.com/Nighthawk14" class="nav-link github" target="_blank"></a>
