chore(angular): update angular from 2.x to 4.x

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-@import '../assets/styles/variables';
+@import 'variables';
 $icon-font-path: "/assets/fonts/";
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 $ionicons-font-path: "/assets/fonts";
