--- a/src/app/technos/techno/techno.component.html
+++ b/src/app/technos/techno/techno.component.html
@@ -1,5 +1,5 @@
 <div class="techno_desktop">
-    <div class="flip-container" (ontouchstart)="this.classList.toggle('hover');">
+    <div class="flip-container" [ngClass]="{hover: onTouch}" (ontouchstart)="onTouch = !onTouch;">
         <div class="flipper">
             <div class="front">
                 <div class="imgTech" [ngClass]="techno.CSSClass"></div>
