--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -14,6 +14,7 @@ nav{
   display: none;
   top: 50%;
   transform: translateY(-50%);
+  z-index: 2;
   ul{
     list-style-type: none;
     padding: 0;
