Add new projects & technos + cleanup

--- a/preact/src/components/technos/techno/techno.scss
+++ b/preact/src/components/technos/techno/techno.scss
@@ -92,6 +92,15 @@
   @include technoImage('koa');
   @include technoImage('protractor');
   @include technoImage('jasmine');
+  @include technoImage('graphql');
+  @include technoImage('react');
+  @include technoImage('terraform');
+  @include technoImage('codeship');
+  @include technoImage('nextjs');
+  @include technoImage('nightwatch');
+  @include technoImage('splunk');
+  @include technoImage('jest');
+  @include technoImage('kubernetes');
 }
 
 /** FLIP **/
