--- a/preact/src/style/index.scss
+++ b/preact/src/style/index.scss
@@ -1,8 +1,8 @@
 @import 'variables';
-$icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
-$ionicons-font-path: "~ionicons/dist/fonts/";
-@import '~bootstrap-sass/assets/stylesheets/bootstrap';
-@import '~ionicons/dist/scss/ionicons';
+$icon-font-path: "bootstrap-sass/assets/fonts/bootstrap/";
+// $ionicons-font-path: "~ionicons/dist/fonts/";
+@import 'bootstrap-sass/assets/stylesheets/bootstrap';
+// @import '~ionicons/dist/scss/ionicons';
 
 body {
   overflow-x:hidden;
