--- a/preact/src/style/variables.scss
+++ b/preact/src/style/variables.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Pacifico|Open+Sans:300,400,600,700,800|Oxygen:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Pacifico|Open+Sans:300,400,600,700,800|Oxygen:400,300,700);
 
 $orange:#E95A2D;
 $grey:#F7F7F7;
